--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+.container {
+    max-width: 999px;
+    margin-top: 29px;
+    margin-bottom: 29px;
+    align-self: center;
+    width: 99%;
+    display: block;
+}
 body {
     height: 100vh;
     margin: 0px;
