--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -2,12 +2,10 @@
     box-sizing: border-box;
 }
 .container {
-    max-width: 999px;
-    margin-top: 29px;
-    margin-bottom: 29px;
-    align-self: center;
-    width: 99%;
-    display: block;
+    max-width: 1000px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
 }
 body {
     height: 100vh;
@@ -15,6 +13,7 @@ body {
     padding: 0px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     color: #484848;
     font-size: 14px; 
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
