--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -40,6 +40,7 @@
     flex-direction: column;
     justify-content: center;
     position: relative; /* so i can postion the popover */
+    z-index: 5;
 }
 
 .locations h3,
