--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -3,7 +3,7 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
-    
+    z-index: 5;
 }
 header .logo {
     height: 100%;
