--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,19 +1,23 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100vh;
 }
 .container {
     max-width: 1000px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 30px 0px;
     width: 100%;
 }
+
 body {
-    height: 100vh;
-    margin: 0px;
-    padding: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
     color: #484848;
     font-size: 14px; 
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
